--- a/app/views/home/updateIdea.html.erb
+++ b/app/views/home/updateIdea.html.erb
@@ -1,7 +1,8 @@
+<!--<h1 style=color:white>updateIdea : 상품개별창에서 내용 수정하는 페이지입니다. </h1>	-->
 <!-- Wrapper -->
 	<div id="wrapper">
 		
-	<h1 style=color:white>updateIdea : 상품개별창에서 내용 수정하는 페이지입니다. </h1>			
+			
 		
 			<!--여기 배치좀 도와주세요ㅠㅠ-->
 		<%=form_tag("/home/update/#{@post.id}", method:"post", multipart: true) do%>
