--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,17 +10,16 @@
 							<div class="inner">
 								<h1>Purchase Your Idea</h1>
 								<form action="home/ideaList" method="get"><button type="submit">쇼핑하러가기 </button></form>
-								<!--<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>-->
+
 							</div>
 						</div>
 						<nav>
 							<ul>
 								<li><a href="#intro">Idea</a></li>
 								<li><a href="#work">About</a></li>
-								<li><a href="#about">Log In</a></li>
-								<li><a href="#contact">Sign In</a></li>
-								<!--<li><a href="#elements">Elements</a></li>-->
+								<li><a href="#login">Log In</a></li>
+								<li><a href="#signin">Sign In</a></li>
+
 							</ul>
 						</nav>
 					</header>
@@ -45,9 +44,9 @@
 							</article>
 
 						<!-- About -->
-							<article id="about">
+							<article id="login">
 								<h2 class="major">Log In</h2>
-								<form method ="post" action="#">
+								<form method ="post" action="/users/sign_in">
 									<label for="email">ID</label><input type ="email" name ="email" id ="email" placeholder="E-mail"/> </br>
 									<label for="email">PW</label><input type ="password" name ="password" id ="password" placeholder="Password"/> </br></br>
 									<button type="submit" name ="loginbotton">Log In</button>
@@ -57,24 +56,10 @@
 							</article>
 
 						<!-- Contact -->
-							<article id="contact">
+							<article id="sign_in">
 								<h2 class="major">Sign In</h2>
-								<form method="post" action="#">
-									<!--<div class="field half first">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field half">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="4"></textarea>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="special" /></li>
-										<li><input type="reset" value="Reset" /></li>
+								<form method="get" action="/users/sign_up">
+
 									</ul> -->
 									<div class="field half first">
 										<label for="name">Name</label>
@@ -94,88 +79,7 @@
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form>
-								<!-- <ul class="icons">
-									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
-								</ul> -->
 							</article>
-
-						<!-- Elements -->
-							<article id="elements">
-								<h2 class="major">Elements</h2>
-
-								<section>
-									<h3 class="major">Text</h3>
-									<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
-									This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
-									This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
-									<hr />
-									<h2>Heading Level 2</h2>
-									<h3>Heading Level 3</h3>
-									<h4>Heading Level 4</h4>
-									<h5>Heading Level 5</h5>
-									<h6>Heading Level 6</h6>
-									<hr />
-									<h4>Blockquote</h4>
-									<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
-									<h4>Preformatted</h4>
-									<pre><code>i = 0;
-
-while (!deck.isInOrder()) {
-    print 'Iteration ' + i;
-    deck.shuffle();
-    i++;
-}
-
-print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
-								</section>
-
-								<section>
-									<h3 class="major">Lists</h3>
-
-									<h4>Unordered</h4>
-									<ul>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
-									</ul>
-
-									<h4>Alternate</h4>
-									<ul class="alt">
-										<li>Dolor pulvinar etiam.</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
-									</ul>
-
-									<h4>Ordered</h4>
-									<ol>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Etiam vel felis viverra.</li>
-										<li>Felis enim feugiat.</li>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Etiam vel felis lorem.</li>
-										<li>Felis enim et feugiat.</li>
-									</ol>
-									<h4>Icons</h4>
-									<ul class="icons">
-										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-									</ul>
-
-									<h4>Actions</h4>
-									<ul class="actions">
-										<li><a href="#" class="button special">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-									<ul class="actions vertical">
-										<li><a href="#" class="button special">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-								</section>
 
 								<section>
 									<h3 class="major">Table</h3>
