--- a/app/views/home/uploadIdea.html.erb
+++ b/app/views/home/uploadIdea.html.erb
@@ -1,22 +1,6 @@
+<!--<h1 style=color:white>uploadIdea : 새로운 아이디어 업로드하는 페이지입니다. </h1>-->
 <!-- Wrapper -->
 	<div id="wrapper">
-		
-	<h1 style=color:white>uploadIdea : 새로운 아이디어 업로드하는 페이지입니다. </h1>		
-		
-		<!--<form action= '/home/create' method ='post' multipart="true">-->
-			
-		<!--	<h3>아이디어 이름</h3> <input type ='text' name ='title' placeholder='제목을 입력해 주세요'>-->
-			
-		<!--	<h3>아이디어 상세설명</h3>-->
-		<!--	<textarea name ="content" placeholder="아이디어에 대한 상세 설명을 해주세요"></textarea>-->
-			
-		<!--	<h3>아이디어 대표 이미지</h3>-->
-		<!--	<input type ="file" name ="image_up">-->
-			
-		<!--	<input type ="submit" value ="등록 완료">-->
-			
-		<!--</form>-->
-		
 		
 			<!--여기 배치좀 도와주세요ㅠㅠ-->
 		<%=form_tag("/home/create", method:"post", multipart: true) do%>
